examples/type_system/failing/113_keyword_alias_var.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/113_keyword_alias_var.flx
// error[E030]: Unknown Keyword
//
// Unknown keyword `var`. Flux uses `let` for bindings.
//
//   examples/type_system/failing/113_keyword_alias_var.flx:20:1
//    |
// 20 | var x = 1
//    | ^^^
//
// Hint:
//   Did you mean `let`?
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E030

var x = 1
const y = 2
val z = 3
